--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h2>Where A Traditional Past Meets A Modern Future.</h2>
 
     <div id="content">
-      <img src=""
+      <img src="./images/transportation/transit.jpg" alt="Transit jpeg" title="Transit">
     </div>
   </div>
 </body>
