--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <div id="content">
       <img src="./images/transportation/transit.jpg" alt="Modern Transit" title="Transit">
       
-      <h2></h2>
+      <h2>Travel</h2>
+      <img src=""
     </div>
   </div>
 </body>
