Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
       
       <h3>Sources</h3>
       
-      <a href="http://www.lonelyplanet.com/saudi-arabia/riyadh"></a>
+      <a href="http://www.lonelyplanet.com/saudi-arabia/riyadh">Lonely Planet</a>
+      <a href=""
     </div>
   </div>
 </body>
