--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       
       <h3>Sources</h3>
       
-      <p></p><a href="http://www.lonelyplanet.com/saudi-arabia/riyadh">Lonely Planet</a>
+      <p><a href="http://www.lonelyplanet.com/saudi-arabia/riyadh">Lonely Planet</a>
       <a href="http://en.wikipedia.org/wiki/Riyadh">Wikipedia</a>
     </div>
   </div>
