--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <h3>Sources</h3>
       
       <p><a href="http://www.lonelyplanet.com/saudi-arabia/riyadh">Lonely Planet</a></p>
-      <p></p><a href="http://en.wikipedia.org/wiki/Riyadh">Wikipedia</a>
+      <p><a href="http://en.wikipedia.org/wiki/Riyadh">Wikipedia</a>
     </div>
   </div>
 </body>
